--- a/documentos/templates/documentos/certificado_coorientador.html
+++ b/documentos/templates/documentos/certificado_coorientador.html
@@ -5,11 +5,14 @@
 {% endcomment %}
 
 {% block head %}
+
+  <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
+  
   <style>
       @page {
           size: a4 portrait; /*landscape*/
           margin: 5.0cm  1.3cm  1.3cm  1.5cm; /* top  right bottom left */
-          background-image: url('pfe/papel_timbrado.pdf');
+          background-image: url('arquivos/papel_timbrado.pdf');
       }
   </style>
 
@@ -132,7 +135,7 @@
     <br><br>
     Atenciosamente,<br><br>
   
-  <img class="signature" src="pfe/signature.png">
+  <img class="signature" src="arquivos/signature.png">
   <br>
     Prof. Dr. Luciano Pereira Soares<br>
     <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
