--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -36,6 +36,7 @@
         <a href="{% url 'certificados_submetidos' %}"><li>Listar Certificados</li></a>
         <a href="{% url 'selecao_geracao_certificados' %}"><li>Gerar Novos Certificados</li></a>
         <a href="{% url 'certificacao_falconi' %}"><li>Certificações Falconi</li></a>
+        <a href="{% url 'carregar_certificado' %}"><li>Carregar Certificado</li></a>
     </ul>
 
     <hr>
