--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -5,6 +5,11 @@
     Data: 4 de Setembro de 2019
 {% endcomment %}
 
+{% block head %}
+  {% load static %}
+  {% load certificado_banca %}
+{% endblock %}
+
 {% block content %}
   
   <span class="titulo">{{professor.user.get_full_name}}</span>
@@ -37,11 +42,15 @@
     {% for projeto in projetos %}
       {% if projeto.alocacao_set.all.count > 0 %}
         <li><a href="{% url 'projeto_completo' projeto.id %}">
-        [{{projeto.ano}}.{{projeto.semestre}}] -
+        {{projeto.ano}}.{{projeto.semestre}} -
         {{projeto.get_titulo}}
         ({{projeto.organizacao.nome}})
-        { {{ projeto.alocacao_set.all.count }} aluno(s) }
-        </a></li>
+        { {{ projeto.alocacao_set.all.count }} estudante(s) }
+        </a>
+        {% if projeto.certificado_orientador %}
+          <a href="{{ projeto.certificado_orientador.last.documento.url }}" target="_blank" rel="noopener noreferrer">[CERTIFICADO]</a><br>
+        {% endif %}
+        </li>
       {% endif %}
     {% empty %}
       Projetos não encontrados
@@ -98,6 +107,11 @@
               {{ banca.projeto.organizacao.nome }}
             </a>
           {% endif %}
+          {% with certificado=banca|certificado_banca:professor.user %}
+            {% if certificado %}
+              <a href="{{certificado}}" target="_blank" rel="noopener noreferrer">[CERTIFICADO]</a><br>
+            {% endif %}
+          {% endwith %}
         </li>
     {% empty %}
       Bancas não encontrados
