--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -204,7 +204,7 @@
                   [gestor responsavel]
                 {% endif %}
                 {% if conexao.mentor_tecnico %}
-                  [mentor técnico]
+                  [mentoria técnica]
                 {% endif %}
                 {% if conexao.recursos_humanos %}
                   [recursos humanos]
@@ -226,7 +226,7 @@
                 [gestor responsavel]
               {% endif %}
               {% if conexao.mentor_tecnico %}
-                [mentor técnico]
+                [mentoria técnica]
               {% endif %}
               {% if conexao.recursos_humanos %}
                 [recursos humanos]
