--- a/documentos/templates/documentos/gerar_certificados.html
+++ b/documentos/templates/documentos/gerar_certificados.html
@@ -88,16 +88,59 @@
           {% endif %}
           
           {% nospaces %}
-          {% with servidor="https://pfe.insper.edu.br" %}
-          <a href="
-            mailto:{{certificado.usuario.first_name|parse_quote}}%20{{certificado.usuario.last_name|parse_quote}}
-            %20&lt;{{certificado.usuario.email|parse_quote }}&gt;
-            ,?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;
-            &amp;subject=Certificado%20PFE
-            &amp;body={% include 'mensagem_certificados.html' %}">
-            &#x2709; Enviar certificado
+          &#x2709; Enviar certificado (
+          {% with servidor='https://pfe.insper.edu.br' %}
+          <a href="mailto:{{certificado.usuario.first_name|parse_quote}}%20{{certificado.usuario.last_name|parse_quote}}%20&lt;{{certificado.usuario.email|parse_quote }}&gt;?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;
+            &amp;subject=PFE%20Insper%20:
+            {% if certificado.tipo_de_certificado == 101 %}
+              Orientação de Projeto
+            {% elif certificado.tipo_de_certificado == 102 %}
+              Coorientação de Projeto
+            {% elif certificado.tipo_de_certificado == 103 %}
+              Membro de Banca Intermediária
+            {% elif certificado.tipo_de_certificado == 104 %}
+              Membro de Banca Final
+            {% elif certificado.tipo_de_certificado == 105 %}
+              Membro de Banca Falconi
+            {% elif certificado.tipo_de_certificado == 106 %}
+              Mentoria de Projeto
+            {% elif certificado.tipo_de_certificado == 107 %}
+              Mentoria de Projeto
+            {% endif %}
+            {% with formatada=True %}
+            &amp;body=
+              {% include 'mensagem_certificados.html' %}
+            ">
+            {% endwith %}
+            formatado
+          </a>
+          /
+          <a href="mailto:{{certificado.usuario.email|parse_quote }}{% comment %}cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;&amp;{% endcomment %}
+            ?subject=PFE%20Insper%20:
+            {% if certificado.tipo_de_certificado == 101 %}
+              Orientação de Projeto
+            {% elif certificado.tipo_de_certificado == 102 %}
+              Coorientação de Projeto
+            {% elif certificado.tipo_de_certificado == 103 %}
+              Membro de Banca Intermediária
+            {% elif certificado.tipo_de_certificado == 104 %}
+              Membro de Banca Final
+            {% elif certificado.tipo_de_certificado == 105 %}
+              Membro de Banca Falconi
+            {% elif certificado.tipo_de_certificado == 106 %}
+              Mentoria de Projeto
+            {% elif certificado.tipo_de_certificado == 107 %}
+              Mentoria de Projeto
+            {% endif %}
+            {% with formatada=False %}
+            &amp;body=
+              {% include 'mensagem_certificados.html' %}
+            ">
+            {% endwith %}
+            não formatado
           </a>
           {% endwith %}
+          )
           {% endnospaces %}
 
         </td>
