--- a/documentos/templates/mensagem_certificados.html
+++ b/documentos/templates/mensagem_certificados.html
@@ -140,7 +140,7 @@
 
       {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
       Gostaríamos de coletar alguns feedbacks de você sobre o processo.
-      Seria algo curto mesmo, para saber se tudo correu bem e se você tem alguma sugestão de como podemos fazer no futuro, é algo bem rápido mesmo.
+      Seria algo curto mesmo, para saber se tudo correu bem e se você tem alguma sugestão de como podemos fazer no futuro, são basicamente 4 perguntas.
       O link do formulário está em https://pfe.insper.edu.br/organizacoes/projeto_feedback%20{% if formatada %}%3Cb%3E{% endif %}%0D%0A
 
   {% endif %}
