--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -29,8 +29,20 @@
   <strong>Curso:</strong> {{aluno.get_curso_display}}<br>
   <strong>Periodo PFE:</strong> {{aluno.anoPFE}}.{{aluno.semestrePFE}}<br>
   {% if aluno.cr %}
-    <strong>CR:</strong> {{aluno.cr}} <br>
+    <strong>CR:</strong> {{aluno.cr}}<br>
   {% endif %}
+
+  <strong>Situação Acadêmica:</strong> {% if aluno.trancado %}Trancamento{% else %}Normal{% endif %}<br>
+
+  {% if aluno.user.observacoes %}
+    <strong>Observações:</strong>
+    <div style="display: block; padding-left: 18px">
+    {{aluno.user.observacoes|linebreaks}}<br>
+    </div>
+  {% endif %}
+  
+
+  {% comment %} Prenchido pelo estudante {% endcomment %}
 
   {% if aluno.trabalhou %}
     <br><strong>{{aluno.get_trabalhou_help_text }}</strong> {{ aluno.trabalhou|linebreaks }}
