--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -70,13 +70,12 @@
     <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp;<br>
   {% endif %}
   <p>&nbsp;</p>
-  
-  
-  <p>&nbsp;</p>
 
-  {% if parceiro.observacao %}
-      <strong>observações:</strong><br>
-      {{parceiro.observacao|linebreaks}}
+  {% if parceiro.user.observacoes %}
+      <strong>Observações:</strong>
+      <div style="display: block; padding-left: 18px">
+      {{parceiro.user.observacoes|linebreaks}}
+      </div>
   {% endif %}
 
   {% if conexoes %}
