--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -116,7 +116,7 @@
       
       <label for="telefone">telefone:</label><input type="text" size="20" maxlength="20" id="telefone" name="telefone" value="{{usuario.parceiro.telefone}}"><br>
       <label for="celular">celular:</label><input type="text" size="20" maxlength="20" id="celular" name="celular" value="{{usuario.parceiro.celular}}"><br>
-      <label for="skype">skype:</label><input type="text" size="32" maxlength="32" id="skype" name="skype" value="{{usuario.parceiro.skype}}"><br>
+      <label for="instant_messaging">IM:</label><input type="text" size="32" maxlength="32" id="instant_messaging" name="instant_messaging" value="{{usuario.parceiro.instant_messaging}}"><br>
 
       <input type="checkbox" id="principal_contato" name="principal_contato" value="True" {% if usuario.parceiro.principal_contato %}checked{% endif %}>
       <label for="principal_contato"> Principal Contato</label><br>
