--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -66,10 +66,21 @@
       &nbsp;
       {% if parceiro.cargo %} <p style="margin-top: -4px; font-size:13px; line-height:1.3;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{parceiro.cargo}}</p>{% endif %}
       <p style="line-height:0.95;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#x2709; <a href="mailto:{{parceiro.user.email}}">&nbsp;{{parceiro.user.email}}</a></p>
-      {% if parceiro.telefone %} <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; {{parceiro.telefone}} &nbsp;</p>{% endif %}
-      {% if parceiro.celular %} <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1; {{parceiro.celular}} &nbsp;</p>{% endif %}
-      {% if parceiro.skype %} <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;">
-      <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp;</p>{% endif %}
+
+      {% if parceiro.telefone %}&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; 
+        <a href="tel:{{parceiro.telefone}}">{{parceiro.telefone}}</a>&nbsp;<br>
+      {% endif %}
+
+      {% if parceiro.celular %}&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1;
+        <a href="tel:{{parceiro.celular}}">{{parceiro.celular}}</a>&nbsp;
+        <a href="https://wa.me/{{parceiro.celular|cut:' '}}"><img src="{% static 'images/whatsapp.svg' %}" alt="whatsapp" style="width:16px;height:16px;"></a>
+        <br>
+      {% endif %}
+      
+      {% if parceiro.instant_messaging %}&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="instant_messaging" style="width:16px;height:16px;">
+        {% comment %} <a href="instant_messaging:{{parceiro.instant_messaging}}">{% endcomment %}{{parceiro.instant_messaging}}{% comment %}</a>{% endcomment %}&nbsp;<br> 
+      {% endif %}
+
     </li>
     {% endif %}
   {% endfor %}
@@ -87,15 +98,19 @@
       {% endif %}
       &nbsp;
       {% if parceiro.cargo %} <p style="margin-top: -4px; font-size:13px; line-height:1.3;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{parceiro.cargo}}</p>{% endif %}
-      <p style="color: transparent; text-shadow: 0 0 0 lightgrey;line-height:0.95;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#x2709; <a href="mailto:{{parceiro.user.email}}" style="color: LightBlue;">&nbsp;{{parceiro.user.email}}</a></p>
+      <p style="color: transparent; text-shadow: 0 0 0 lightgrey;line-height:0.95;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#x2709; <a href="mailto:{{parceiro.user.email}}" style="color: LightBlue; pointer-events: none; cursor: default;">&nbsp;{{parceiro.user.email}}</a></p>
       {% if parceiro.telefone %} <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; {{parceiro.telefone}} &nbsp;</p>{% endif %}
       {% if parceiro.celular %} 
         <p style="color: transparent; text-shadow: 0 0 0 lightgrey;">
           &nbsp;&nbsp;&nbsp; &#x1F4F1; {{parceiro.celular}}
+          <a href="https://wa.me/{{parceiro.celular|cut:' '}}" style="pointer-events: none; cursor: default;"><img src="{% static 'images/whatsapp.svg' %}" alt="whatsapp" style="width:16px;height:16px;opacity: 0.4;filter: alpha(opacity=40);"></a>
         </p>
       {% endif %}
-      {% if parceiro.skype %} <p style="color: transparent; text-shadow: 0 0 0 lightgrey;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;opacity: 0.4;filter: alpha(opacity=40);">
-      <a href="skype:{{parceiro.skype}}" style="color: LightBlue;">{{parceiro.skype}}</a>&nbsp;</p>{% endif %}
+      {% if parceiro.instant_messaging %} <p style="color: transparent; text-shadow: 0 0 0 lightgrey;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="instant_messaging" style="width:16px;height:16px;opacity: 0.4;filter: alpha(opacity=40);">
+      {% comment %} <a href="instant_messaging:{{parceiro.instant_messaging}}" style="color: LightBlue;"> {% endcomment %}
+      {{parceiro.instant_messaging}}
+      {% comment %} </a> {% endcomment %}
+      &nbsp;</p>{% endif %}
 
     </li>
     {% endif %}
