--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -15,7 +15,10 @@
 
 {% block content %}
 
-  <span class="titulo">Parceiros Profissionais</span>
+  <span class="titulo">Parceiros Profissionais<a
+      href="{% url 'cadastrar_usuario' %}?tipo=parceiro"
+      >&#10133;</a>
+  </span>
 
   {% if pareceiros %}
     <div class="table-responsive">
