--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -64,7 +64,10 @@
 
 {% block content %}
 
-  <span class="titulo">Propostas</span>
+  <span class="titulo">Propostas<a
+    href="{% url 'proposta_submissao' %}"
+    >&#10133;</a>
+  </span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
