--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -335,6 +335,10 @@
 
         <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
 
+        {% if projeto.avancado %}
+          <strong style="color:red"><u>[Avançado]</u></strong>
+        {% endif %}
+
         {% if projeto.organizacao %}
           [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
             >{{ projeto.organizacao.nome }}</a
