--- a/professores/templates/professores/bancas_tabela.html
+++ b/professores/templates/professores/bancas_tabela.html
@@ -7,8 +7,8 @@
 
 {% block head %}
   {% load static %}
-  <script src="{% static 'js/w3.js' %}"></script>
   <script>{% include "tooltip.js" %}</script>
+  {% include "tabelas_includes.html" %}
 {% endblock %}
 
 {% block content %}
@@ -21,65 +21,76 @@
   <label><input onchange="($(this).prop('checked') ? $('#MembrosTable tr > *:nth-child(4)').show() : $('#MembrosTable tr > *:nth-child(4)').hide())" type="checkbox" checked /> Projetos</label>&nbsp;&nbsp;&nbsp;  
   <br><br>
 
-  {% for membros,periodo in anos %} 
-    <big>{{periodo}}</big>
-    {% if membros %}
-      <table id="MembrosTable">
-        <tr>
-          <th onclick="w3.sortHTML('#MembrosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer;width:300px;" class="text-center">Nome</th>
-          <th onclick="w3.sortHTML('#MembrosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer;width:70px;" class="text-center">e-mail</th>
-          <th onclick="w3.sortHTML('#MembrosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer;width:70px;" class="text-center">Quant.</th>
-          <th onclick="w3.sortHTML('#MembrosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer;width:70px;" class="text-center">Projetos</th>
-        </tr>
-        {% for membro, bancas in membros.items %}
-          <tr class="item">
-            <td>
-              {% if membro.tipo_de_usuario == 2 %}
-                <a href="{% url 'professor_detail' membro.professor.id %}">
-                  {{membro.get_full_name}}
-                </a>
-              {% elif membro.tipo_de_usuario == 3 %}
-                <a href="{% url 'parceiro_detail' membro.parceiro.id %}">
-                  {{membro.get_full_name}}
-                </a>
-              {% elif membro.tipo_de_usuario == 4 %}
-                <a href="{% url 'professor_detail' membro.professor.id %}">
-                  {{membro.get_full_name}}
-                </a>
-              {% endif %}  
-            </td>
-            <td>
-              <a href="mailto:{{membro.email}}"> &lt;{{membro.email}}&gt;</a><br>
-            </td>
-            <td class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="
-              {% for banca in bancas %}
-                &bull;
-                {{banca.projeto.get_titulo}}
-                ({{banca.startDate}})
-                <br>
-              {% endfor %}
-            "> 
-              {{bancas|length}}
-            </td>
-            <td>
-              {% for banca in bancas %}
-                &bull;
-                {{banca.projeto.get_titulo}}
-                [{{banca.projeto.organizacao}}]
-                ({{banca.startDate}})
-                <br>
-              {% endfor %}
-            </td>
-          </tr>
-        {% endfor %}
-      </table>
-      <br>
-    {% else %}
-      <p>Não existem bancas.</p>
-      <br>
-    {% endif %}
-  {% endfor %}
+  <div class="table-responsive">
+  
+    {% for membros,periodo in anos %} 
+      <big>{{periodo}}</big>
+      {% if membros %}
+        <table id="MembrosTable" class="table table-bordered table-hover table-sm" style="width: auto;">
+          <thead class="table-info">
+            <tr>
+              <th scope="col" class="text-center">Nome</th>
+              <th scope="col" class="text-center">e-mail</th>
+              <th scope="col" class="text-center">Quant.</th>
+              <th scope="col" class="text-center">Projetos</th>
+            </tr>
+          </thead>
+          {% for membro, bancas in membros.items %}
+            <tr class="item">
+              <td>
+                {% if membro.tipo_de_usuario == 2 %}
+                  <a href="{% url 'professor_detail' membro.professor.id %}">
+                    {{membro.get_full_name}}
+                  </a>
+                {% elif membro.tipo_de_usuario == 3 %}
+                  <a href="{% url 'parceiro_detail' membro.parceiro.id %}">
+                    {{membro.get_full_name}}
+                  </a>
+                {% elif membro.tipo_de_usuario == 4 %}
+                  <a href="{% url 'professor_detail' membro.professor.id %}">
+                    {{membro.get_full_name}}
+                  </a>
+                {% endif %}  
+              </td>
+              <td>
+                <a href="mailto:{{membro.email}}"> &lt;{{membro.email}}&gt;</a><br>
+              </td>
+              <td class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="
+                {% for banca in bancas %}
+                  &bull;
+                  {{banca.projeto.get_titulo}}
+                  ({{banca.startDate}})
+                  <br>
+                {% endfor %}
+              "> 
+                {{bancas|length}}
+              </td>
+              <td>
+                <small>
+                {% for banca in bancas %}
+                  &bull;
+                  {{banca.projeto.get_titulo}}
+                  [{{banca.projeto.organizacao}}]
+                  ({{banca.startDate}})
+                  <br>
+                {% endfor %}
+                </small>
+              </td>
+            </tr>
+          {% endfor %}
+        </table>
+        <br>
+      {% else %}
+        <p>Não existem bancas.</p>
+        <br>
+      {% endif %}
+    {% endfor %}
+
+  </div>
+
   <br>
   <p>&nbsp;</p>
+
+  {% include "tabelas_simples_scripts.html" %}
 
 {% endblock %}
