--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -156,8 +156,10 @@ p {
 table, th, td {
   border-collapse: collapse;
   border: 1px solid black;
+  /*
   padding-left: 5px;
   padding-right: 5px;
+  */
   text-align: left;
   font-size: 16px;
 }
