--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -6,6 +6,8 @@
 {% endcomment %}
 
 {% block head %}
+  {% load l10n %}
+
   <style>
     textarea {
       max-width:100%;
@@ -78,6 +80,9 @@
       <label for="semestre">Semestre PFE: </label> 
       <input type="number" id="semestre" name="semestre" min="1" max="2" value="{{usuario.aluno.semestrePFE}}" required>
       
+      <br>
+      <label for="cr">cr: </label> <input type="number" style="width: 5em; text-align: right;" min="0" max="10" step="0.0001" id="cr" name="cr" value="{{usuario.aluno.cr|unlocalize}}">
+
       <br><br>
       <input type="checkbox" id="estudante_trancado" name="estudante_trancado" value="True" {% if usuario.aluno.trancado %}checked{% endif %}>
       <label for="estudante_trancado"> Trancado</label><br>
