tabelas mais responsivas

--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -19,7 +19,7 @@
 
   {% if organizacoes_list %}
     <div class="table-responsive">
-      <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm">
+      <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
         <thead class="table-info">
           <tr>
             <th scope="col" class="text-center">Organização</th>
