--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -22,7 +22,7 @@
 
   {% if pareceiros %}
     <div class="table-responsive">
-    <table id="ParceirosTable" class="table table-bordered table-hover table-sm">
+    <table id="ParceirosTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
       <caption style="text-align:right">
         <small>GR: Gestor Responsável / MT: Mentoria Técnica / RH: Recursos Humanos</small>
       </caption>
