--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -24,7 +24,7 @@
 
   {% if professores %}
   <div class="table-responsive">
-    <table id="ProfessoresTable" class="table table-bordered table-hover table-sm">
+    <table id="ProfessoresTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
     <caption><small>usuários <u>sublinhados</u> são membros do comitê do PFE.</small> </caption>
     <thead class="table-info">
       <tr>
