--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -19,7 +19,7 @@
   <div class="atualizar">
     {% if projetos %}
       <div class="table-responsive">
-        <table id="ProjetosTable" class="table table-bordered table-hover table-sm">
+        <table id="ProjetosTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
           <thead class="table-info">
             <tr>
               <th scope="col" class="text-center">Projeto</th>
