--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -42,7 +42,7 @@
 
     {% if alunos_list %}
       <div class="table-responsive">
-      <table id="EstudantesTable" class="table table-bordered table-hover table-sm">
+      <table id="EstudantesTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
         <thead class="table-info">
           <tr>
               <th scope="col" class="text-center">Nome</th>
